# QtShapes

./: README.md
QtShapes/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pa_cube.cpp  pa_cube.h  pa_cylinder.cpp  pa_cylinder.h  pa_triangular_prism.cpp  pa_triangular_prism.h  paintable.h  paintdevicewidget.cpp  paintdevicewidget.h  paintsquare.cpp  tab1cube.cpp  tab1cube.h  tab2cylinder.cpp  tab2cylinder.h  tab3triangularprism.cpp  tab3triangularprism.h
build-QtShapes-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/QtShapes_autogen/: mocs_compilation.cpp
